SCSS/pages/_home.scss
// File: _home.scss
// Author: Tomasz Dudkowski
// 2022

@use "../themes/theme";

html {
  // Smooth scroll always for html tag
  scroll-behavior: smooth;
  // scroll-snap-type: y ;
  overflow-x: hidden;
}

body::-webkit-scrollbar {
  width: .5rem;
}

body::-webkit-scrollbar-track {
  background: #1e1e24;
}

body::-webkit-scrollbar-thumb {
  background: theme.$accent-color;
  border-radius: 30px;
}

section {
  // Scroll center snap
    scroll-snap-align: center;
}

#information {
  height: 101vh;
}

// Set image cover position
@mixin img-cover($position) { // $position = left / center / right
  margin: 0 auto;
  box-sizing: content-box;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: $position;
}

// image cover class
.cover-left {
  @include img-cover(left);
}

.cover-center {
  @include img-cover(center);
}

.cover-right {
  @include img-cover(right);
}

// circle image class
.circle-img {
  @include img-cover(center);
  height: 65%;
  width: 100%;
  border-radius: 50%;
}

// fade-in effect
.fade-in {
  opacity: 0;
  transition: opacity 800ms ease-in;
}

.fade-in.appear {
  opacity: 1;
}

// slide-in effect
.slide-in-right {
  transform: translateX(-100%);
}

.slide-in-left {
  transform: translateX(100%);
}

.slide-in-left,
.slide-in-right {
  transition: transform 1000ms cubic-bezier(0.175, 0.885, 0.32, 1.275); // bounce in
}

.slide-in-left.appear,
.slide-in-right.appear {
  transform: translateX(0);
}


// Background with image
.background-img {
  width: 100%;
}

.background-img {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/dist/img/uakaiifdzg8v14myjyg153jpezrkfe3d.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
  width: 100%;
  height: 100vh;
}

@mixin portfolio {
    h2 {
        padding-top: 10%;
        font-size: 4rem;
    }
}

.portfolio {
    @include portfolio();
}

.portfolio-content {
    padding-top: 15%;
}

